--- a/public/assets/css/developer.css
+++ b/public/assets/css/developer.css
@@ -1051,6 +1051,9 @@ div.filepicker {
   border-color: #b1b1b1;
   box-shadow: 0 0 2px 1px rgb(167,167,167);
 }
+.login-btn[disabled]:hover{
+  background-color: #f9a11d;
+}
 /* signup page css end */
 
 /* after super admin login user page css start */
