--- a/public/assets/css/developer.css
+++ b/public/assets/css/developer.css
@@ -1213,6 +1213,13 @@ div.filepicker {
   float: left;
   width: 100%;
 }
+.my-profile-plan-menu a{
+  padding: 15px 17px !important;
+}
+.user-icon{
+  height: 25px;
+  width: 25px;
+}
 
 @media only screen and (max-width: 680px) {
   .private-album,
