--- a/public/assets/css/developer.css
+++ b/public/assets/css/developer.css
@@ -1220,6 +1220,10 @@ div.filepicker {
   height: 25px;
   width: 25px;
 }
+.setting-new-icon{
+  width: 22px;
+  height: 22px;
+}
 
 @media only screen and (max-width: 680px) {
   .private-album,
