resolved social icon issue in responsive

--- a/public/assets/css/developer.css
+++ b/public/assets/css/developer.css
@@ -1028,3 +1028,7 @@ div.filepicker {
   -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=20)";
   filter: alpha(opacity=20);
 }
+.home-slider + .bottom-footer{
+  float: left;
+  width: 100%;
+}
