--- a/src/assets/css/admin/site-content/site-content.css
+++ b/src/assets/css/admin/site-content/site-content.css
@@ -238,6 +238,31 @@
     cursor: pointer;
 }
 
+.delete-service-thumb{
+    -moz-border-radius: 20px;
+    -webkit-border-radius: 20px;
+    border-radius: 20px; /* border radius */
+    background-color: #f1f1f1; /* layer fill content */
+    -moz-box-shadow: 2px 3px 3px 0 rgba(1,1,1,.08); /* drop shadow */
+    -webkit-box-shadow: 2px 3px 3px 0 rgba(1,1,1,.08); /* drop shadow */
+    box-shadow: 2px 3px 3px 0 rgba(1,1,1,.08); /* drop shadow */
+    position: absolute;
+    bottom: 30px;
+    right: 0px;
+    height: 40px;
+    width: 40px;
+    padding: 12px 10px;
+}
+.delete-service-thumb:hover,
+.delete-service-thumb:focus{
+    background-color: #e1e1e1;
+    border: none;
+    outline: none;
+}
+.delete-service-thumb {
+    cursor: pointer;
+}
+
 .contact-tab-content{
     -moz-border-radius: 3px;
     -webkit-border-radius: 3px;
@@ -313,6 +338,11 @@
         line-height: 18px;
     }
     .edit-service-thumb {
+        height: 30px;
+        width: 30px;
+        padding: 8px 8px;
+    }
+    .delete-service-thumb {
         height: 30px;
         width: 30px;
         padding: 8px 8px;
