put header [WIP]

--- a/public/assets/css/developer.css
+++ b/public/assets/css/developer.css
@@ -1441,3 +1441,46 @@ div.filepicker {
 .edit-slide-margin{
   margin: 0px 20px;
 }
+
+body {
+  overflow-x: hidden;
+}
+
+.navbar-dark .navbar-toggler {
+  border: 0px !important;
+  outline: none !important;
+}
+
+.navbar-dark .navbar-toggler-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255, 255, 255, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E") !important;
+}
+
+.navbar-dark .navbar-collapse.collapsing,
+.navbar-dark .navbar-collapse.show {
+  position: absolute;
+  z-index: 555;
+  background: #fff;
+  color: black;
+  left: 0px;
+  right: 0px;
+  top: 100%;
+}
+
+@media (max-width: 991px) {
+  .navbar-dark .navbar-collapse.collapsing,
+  .navbar-dark .navbar-collapse.show {
+    padding: 10px 0px;
+  }
+}
+
+.navbar-dark .navbar-collapse.collapsing li.active a,
+.navbar-dark .navbar-collapse.show li.active a {
+  color: #000;
+  border-bottom: 1px solid #000;
+}
+
+.navbar-dark .navbar-collapse.collapsing li a,
+.navbar-dark .navbar-collapse.show li a {
+  color: #000;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+}
