--- a/public/assets/css/developer.css
+++ b/public/assets/css/developer.css
@@ -1441,3 +1441,14 @@ div.filepicker {
 .edit-slide-margin{
   margin: 0px 20px;
 }
+header {
+  padding-top: 20px;
+  background-size: 100% 100%;
+}
+.back-link, .back-link:hover {
+  float: right;
+  color: #fff;
+}
+.back-arrow{
+  font-size: 30px;
+}
