--- a/src/assets/css/admin/homepage_gallery/homepage-gallery.css
+++ b/src/assets/css/admin/homepage_gallery/homepage-gallery.css
@@ -2,7 +2,7 @@
     font-family: 'ralewayregular';
 }
 .homepage-gallery{
-    margin: 30px 0 50px;
+    /* margin: 30px 0 50px; */
     -moz-border-radius: 6px;
     -webkit-border-radius: 6px;
     border-radius: 6px; /* border radius */
@@ -208,7 +208,48 @@
 .cancel-slide-btn:focus{
     outline: none !important;
 }
+.filter-wrap {
+    padding: 20px 0;
+}
 
+.create-album-btn {
+    padding: 6px 18px;
+    height: 35px;
+    position: relative;
+    font-size: 14px;
+    text-transform: uppercase;
+    border: 2px solid #f9a11d;
+    font-family: 'ralewaysemibold';
+}
+.create-album-btn:hover,
+.create-album-btn:focus,
+.create-album-btn:active,
+.create-album-btn:active:hover {
+    background: #feae37;
+    color: #fff;
+    border: 2px solid #feae37;
+    outline: none;
+    box-shadow: none;
+}
+.create-album-btn:hover .add-icon,
+.create-album-btn:focus .add-icon,
+.create-album-btn:active .add-icon,
+.create-album-btn:active:hover .add-icon {
+    border: 1px solid #fff;
+}
+
+.add-icon {
+    height: 18px;
+    width: 18px;
+    padding: 0;
+    border-radius: 50%;
+    border: 1px solid #fff;
+    line-height: 16px;
+    font-size: 10px;
+    margin-right: 5px;
+    margin-top: 1px;
+    float: left;
+}
 @media only screen and (max-width: 1024px) {
   .album-details-page-wrap{
     display: block;
